[package]
name = "isbfc"
version = "0.0.1"
authors = ["Ian D. Scott <ian@iandouglasscott.com>"]
description = "Brainfuck compiler for x86_64"
repository = "https://github.com/ids1024/isbfc"
license = "MIT"
edition = "2021"
default-run = "isbfc"

[dependencies]
clap = "3.0"
unicode-width = "0.2"
static_assertions = "1.1.0"
lazy_static = "1.4"
cranelift = "0.121.0"
cranelift-codegen = { version = "0.121.0", features = ["x86"] }
target-lexicon = "0.13.2"
cranelift-control = "0.121.0"
cranelift-jit = "0.121.0"
cranelift-module = "0.121.0"

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.4"
